<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.android.shopup.ui.fragments.mainlistsfragment.MainListsViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/toolbarContainer"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/mainCoolColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/appTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name2"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/deleteMessage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:padding="4dp"
                    android:gravity="end"
                    android:text="@string/swipe_left_to_delete"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    android:visibility="@{viewModel.infoMessageVisibility}"
                    app:layout_constraintBottom_toTopOf="@+id/archiveMessage"
                    app:layout_constraintEnd_toEndOf="@+id/archiveMessage"
                    app:layout_constraintStart_toEndOf="@+id/appTitle" />

                <TextView
                    android:id="@+id/archiveMessage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:padding="4dp"
                    android:text="@string/swipe_right_to_archive"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    android:gravity="end"
                    android:visibility="@{viewModel.infoMessageVisibility}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/appTitle" />

                <TextView
                    android:id="@+id/openArchiveButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/close_text_background"
                    android:onClick="@{viewModel.openArchiveFragment}"
                    android:paddingStart="8dp"
                    android:paddingTop="4dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="4dp"
                    android:text="@string/archive"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/toolbarContainer"
                    app:layout_constraintTop_toTopOf="@+id/appTitle" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/emptyMainListText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/empty_main_lists_text"
                android:textSize="16sp"
                android:visibility="@{viewModel.emptyMainListTextVisibility}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbarContainer" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/mainListsRecycler"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:adapter="@{viewModel.listsRecyclerViewModel.adapter}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbarContainer" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/mainListsAddListButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:onClick="@{viewModel.addNewList}"
                android:src="@drawable/ic_add_white_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:maxImageSize="40dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>